<resources>
    <string name="app_name">Practice02</string>
    <string name="action_login">로그인</string>
    <string name="action_register">등록</string>
    <string name="action_edit">수정</string>
    <string name="action_list">목록</string>
    <string name="action_change">문자 변경</string>
    <string name="loginId">로그인 아이디</string>
    <string name="input_loginId">아이디를 입력하세요.</string>
    <string name="password">비밀번호</string>
    <string name="input_password">비밀번호를 입력하세요.</string>
    <string name="ok">확인</string>
    <string name="autologin">자동 로그인</string>
    <string name="student">학생</string>
    <string name="ta">조교</string>
    <string name="professor">교수</string>
    <string name="change">변경 사항</string>
    <string name="job">직업</string>
    <string name="close">닫기</string>
    <string name="loginSuccess">로그인 성공</string>
    <string name="inputPhone">전화번호를 입력하세요.</string>
    <string name="move">목록 보기</string>
    <string name="add">추가</string>
    <string name="doYouWantToDelete">삭제하시겠습니까?</string>
    <string name="cancel">취소</string>
    <string name="delete">삭제</string>
    <string name="cat">고양이</string>
    <string name="dog">강아지</string>
    <string name="owl">부엉이</string>
    <string name="save">저장</string>
    <string name="saveSuccess">저장 성공 완료</string>
    <string-array name="phoneTypes">
        <item>집 전화</item>
        <item>휴대폰</item>
        <item>사무실 전화</item>
        <item>기타</item>
    </string-array>
</resources>
